    ADDED: Two single click rename (Total Commander rename)
    ADDED: The 3rd hand of krusader. click the litle arrow below the panel's
           scrollbar to see..
    ADDED: showing suid, sgid and sticky bits in the permissions column
    ADDED: New useraction-system (partly based on Shies usermenu-prototype)
    
    REACTIVATED: usermenu (now using the new useraction-system)

    FIXED: krarc problems at copying subdirectories from the archive
    FIXED: [ 1005533 ] stepping onto a subfs device crashes krusader
    FIXED: [ 988835 ] window size of synchronize dirs is not stored
    FIXED: [ 946567 ] krusader minimizes to tray on desktop change
    FIXED: mountman changes... read the email ;-)    


1.40
======================
    ADDED: when searching in files (grep), push the string we're searching for
           into the clipboard when pressing F3 or F4. this saves an extra copy
           when searching inside the file
    ADDED: Catalan translation
 
 DISABLED: usermenu for 1.40
    
    FIXED: [ 962340 ] Alt-T broken to call Tools menu
    FIXED: [ 980252 ] Compare by Content: right/left position swapped
    FIXED: [ 990141 ] F3/F4 in root mode trouble with permissions    
    FIXED: [ 959916 ] Krusader window too large on startup
    FIXED: username and group information are wrong for ftp_vfs
    FIXED: UMR (uninitialized memory read) in vfs::fromPathOrURL
    
  UPDATED: Polish translation


1.40-beta2
======================
    ADDED: Chinese Simplified translation
    
    FIXED: the new ftp dialog URLs are saved into a stochastic configuration
           group
    FIXED: [ 960003 ] Swapped letters in quick-search
    FIXED: KIO::Slave url redirection handling
           (e.g. now devices:/ and settings:/ works !)
    FIXED: [ 962598 ] viewer didn't display XML files 
    FIXED: [ 960595 ] problem with paths containing more '@' characters
           (FTP proxy hack)
    FIXED: [ 957145 ] krusader closes editor without asking