@@ -22,7 +22,9 @@
     
     REACTIVATED: usermenu (now using the new useraction-system)
 
-    FIXED: krarc problems at copying subdirectories from the archive
+    FIXED: krarc, problem with copying / moving inside the archive
+    FIXED: krarc, problem with international characters in put/mkdir
+    FIXED: krarc, problems at copying subdirectories from the archive
     FIXED: [ 1005533 ] stepping onto a subfs device crashes krusader
     FIXED: [ 988835 ] window size of synchronize dirs is not stored
     FIXED: [ 946567 ] krusader minimizes to tray on desktop change
